# the_frankie_project

./: .gitignore  README.md  fetch.py  pyproject.toml
downloads/: vous-aimez-les-recits-decouvrez-notre-serie-originale-3h56-le-premier-homme-sur-la-lune-3762944.mp3.downloading
frankie/: frankie.py
tests/: frankie_test.py
